# jmap-open-client

./: .gitignore  Cargo.toml  README.org  config.example.toml  flake.nix  justfile  llms.org  rust-template.json  tasks.org  treefmt.toml
.claude/agents/: template-compliance.md
.github/workflows/: publish.yml
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  main.rs
crates/cli/tests/: integration_test.rs
crates/lib/: Cargo.toml
crates/lib/src/: logging.rs
